--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "mysql2": "^3.3.3",
     "rxjs": "~7.8.0",
+    "sequelize": "^6.31.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
